# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  21 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Added (slightly
  modified) patch from bug 64682.

  16 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Modified
  getmaskingstatus() to use settings.prevmaskdict rather than reading packages
  directly in support of cascading profiles.

*portage-2.0.51_rc1 (15 Sep 2004): And we have Release Candidate!

  15 Sep 2004; Nicholas Jones <carpaski@gentoo.org> ebuild: On merge, disable
  the noauto feature explicitly.

  15 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed the
  'missing ebuild' for uninstalls of packages not in the tree.

  15 Sep 2004; Nicholas Jones <carpaski@gentoo.org> man/*: Started adding
  to the documentation in order to break it an make it look funny. Added a
  couple entries for missing concepts like 'inherit' and 'useq' and 'hasq'.
  Cleared up a few things here and there with usage. Added in the metadata
  target for emerge.

*portage-2.0.51_pre24 (14 Sep 2004): Last _pre before docs and rc/stable.

  14 Sep 2004; Nicholas Jones <carpaski@gentoo.org> repoman: Extra handling
  for weird CVS/Repository info on OSX.

  14 Sep 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Fixed a traceback
  in traceback handling where a value was trying to be extracted from an
  exception. Handled the case where a binary package does not have an ebuild
  in a tree or overlay and the verbose overlay output requires it. Change to
  the CVS checkouts for emerge sync, moved the -P immediately after the co.

  14 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_exception.py: