@@ -52,7 +52,7 @@ def spawn(mycommand,env={},opt_name=None,fd_pipes=None,returnpid=False,uid=None,
 	mypid=[]
 	if logfile:
 		pr,pw=os.pipe()
-		mypid.extend(spawn_bash("/bin/tee -i -a '%s'" % logfile,returnpid=True,fd_pipes={0:pr,1:1,2:2}))
+		mypid.extend(spawn_bash("PATH=/bin:/usr/bin tee -i -a '%s'" % logfile,returnpid=True,fd_pipes={0:pr,1:1,2:2}))
 		retval=os.waitpid(mypid[-1],os.WNOHANG)[1]
 		if retval != 0:
 			# he's dead jim.
